<resources>
    <string name="ApI_Name">ApI Name</string>
    <string name="Cancel">Cancel</string>
    <string name="Company_Name">Mungi Engineers Pvt Ltd</string>
    <string name="Consumption">Consumption</string>
    <string name="CookieKey">Cookie</string>
    <string name="Handler_Name">Handler Name</string>
    <string name="Ip_Address">Ip Address</string>
    <string name="Item_Entry">Item Entry</string>
    <string name="LogOut">LogOut</string>
    <string name="Login">साइन इन</string>
    <string name="Save">Save</string>
    <string name="Setting">Setting</string>
    <string name="SiteCode">SiteCode</string>
    <string name="aajacha_suvuchar">आजचा सुविचार</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_seva">Add सेवा</string>
    <string name="already_have_an_account">Already have an account? <font color="#302165">SignIn</font></string>
    <string name="amchyavishayi">आमच्याविषयी</string>
    <string name="app_name">Shree Gurupeeth</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto">Auto</string>
    <string name="ayurved_note">आयुर्वेद-औषधे दिंडोरी प्रणीत श्री स्वामी समर्थ सेवा केंद्रात उपलब्ध</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bullet" />
    <string name="cancel">Cancel</string>
    <string name="chanting_help">या मेन्युचा वापर आपण जप करण्यासाठी करु शकतात. यासाठी तीन प्रणालींपैकी (Mode) कोणत्याही एका प्रणालीचाआपण वापर करु शकतात. सेवेक-यांच्या जवळ ज्यावेळी माळ नसेल, जसं प्रवास करतेवेळी, त्यावेळी जप करण्यासाठी सोय होण्यासाठी या मेन्युची उपलब्धता करुन देण्यात येत आहे. हा मेन्यु जप माळेचा पर्याय म्हणुन नियमित वापरासाठी न करता अडचणीच्यावेळी याचा उपयोग करावा. नित्यसेवेमध्ये कुठल्याही परिस्थितीमध्ये खंड पडु नाही यासाठी हा मेन्यु फार उपयुक्त आहे.<b>"

१. Vibration Mode (कंपन प्रणाली):"</b>या प्रणालीमध्ये जप मोजण्यासाठी आपण एकदा मंत्र म्हंटल्यावर टॅप करावे (हलके टच करावे). आपला मोबाईल कंपन पावेल (व्हायब्रेट होईल) आणि संख्या मोजली जाईल. <b>"

२. Sound Mode (ध्वनी प्रणाली):"</b>या प्रणालीमध्ये जप मोजण्यासाठी आपण एकदा मंत्र म्हंटल्यावर टॅप करावे (हलके टच करावे). आपला मोबाईल हलक्या आवाजात आवाज करेल (बिप होईल) आणि संख्या मोजली जाईल. <b>"

३. Auto Mode (स्वचलित प्रणाली):"</b>या प्रणालीमध्ये जप मोजण्यासाठी आपणास करायचीजप संख्या (Counts) उदा. माळेच्या पटीत करतांना १०८, किंवा ११ वेळा, किती माळ जप करायचा/किती वेळा उपरोक्त संख्येत जप करायचा (Rounds) उदा. ११ माळी किंवा १ वेळा, आणि मंत्र म्हणण्यासाठी लागणारा वेळ (Time Interval) आपणासा सेट करावे लागेल. प्ले केल्यावर तितक्या सेकंदानंतर जप मोजणी आपोआप होईल आणि वाढलेली संख्या आपणास दिसेल.</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chnandraRashi">चंद्रराशी:</string>
    <string name="com_lamudi_phonefield_edittext">phone_edit_text</string>
    <string name="com_lamudi_phonefield_flag_spinner">flag_spinner</string>
    <string name="com_lamudi_phonefield_til_phone">til_phone</string>
    <string name="comming_soon">"
लवकरचं उपलब्ध...
"</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_data">config</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="connecting_to_server">Connecting to server</string>
    <string name="copyright">© 2020</string>
    <string name="count">माळेतील मणी (Count) :</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_name_code">%1$s (%2$s)</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="country_full_name_name_code_and_phone_code">%1$s (%2$s) +%3$s</string>
    <string name="country_name_and_code">%1$s (%2$s)</string>
    <string name="custom_data_payloads">dataPayloads</string>
    <string name="day_special">दिनविशेष:</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_web_client_id">432590835479-q6n5dll1vrefj5klt0jp9mdapi8d7fn2.apps.googleusercontent.com</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="dialog_positive_button_settings">SETTINGS</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="dindori">दिंडोरी</string>
    <string name="dindori_address">श्री स्वामी समर्थ प्रधान केंद्र, दिंडोरी, नाशिक (महाराष्ट्र) 422202</string>
    <string name="dindori_email">pradhankendradindori@gmail.com</string>
    <string name="dindori_header">प्रधान सेवा केंद्र, श्री क्षेत्र दिंडोरी</string>
    <string name="dindori_phone">9922420009 | 02557-221710</string>
    <string name="donate">Donate</string>
    <string name="dont_show_again">"Don't show again"</string>
    <string name="dpu">दिंडोरी प्रणीत उत्सव</string>
    <string name="email">ई-मेल</string>
    <string name="email_error">Please enter your email</string>
    <string name="email_hint">Email</string>
    <string name="empty_message">माहिती उपलब्ध नाही.</string>
    <string name="enter_mobile">कृपया आपला मोबाईल नंबर लिहा</string>
    <string name="enter_name">कृपया आपले नाव लिहा</string>
    <string name="enter_valid_mail">कृपया ई-मेल तपासून पहा</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fb_login_text">Sign in with facebook</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fcm_message_body">FCM message body</string>
    <string name="fcm_message_title">FCM message title</string>
    <string name="firebase_database_url">https://shreegurupith.firebaseio.com</string>
    <string name="forgot">forgot?</string>
    <string name="gcm_defaultSenderId">432590835479</string>
    <string name="getting_data">Getting User Info…</string>
    <string name="google_api_key">AIzaSyCNsMtdG24JTAjxwx8vW8_BG47izhKtIt0</string>
    <string name="google_app_id">1:432590835479:android:d7395145f8b5c5b8</string>
    <string name="lbl_aamavastya">अमावस्या</string>
    <string name="lbl_akandnaam">अखंड नाम –जपयज्ञ सप्ताह</string>
    <string name="lbl_fri">शुक्र</string>
    <string name="lbl_mon">सोम</string>
    <string name="lbl_pournima">पौर्णिमा</string>
    <string name="lbl_sankasti">संकष्टी चतुर्थी</string>
    <string name="lbl_sat">शनि</string>
    <string name="lbl_shreeGurupeeth">श्रीगुरुपीठ मासिक सत्संग</string>
    <string name="lbl_sun">रवि</string>
    <string name="lbl_thrs">गुरु</string>
    <string name="lbl_tue">मंगळ</string>
    <string name="lbl_wed">बुध</string>
</resources>