<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/root" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
            <RelativeLayout android:orientation="vertical" android:background="@color/calendar_light_header" android:padding="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.dp.sgp.util.TextViewRegular android:textAppearance="?textAppearanceListItemSmall" android:textColor="@color/white" android:gravity="left" android:id="@id/tvMarqueHeader" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/factor_mdpi_05_dp" android:text="@string/app_name" android:scrollHorizontally="true" android:singleLine="true" android:freezesText="true" android:drawablePadding="@dimen/dp_10" android:marqueeRepeatLimit="marquee_forever" />
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/calendar_light_header" android:padding="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="7.0">
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_sun" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_mon" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_tue" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_wed" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_thrs" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_fri" android:layout_weight="1.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="@dimen/text_16" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_sat" android:layout_weight="1.0" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView android:id="@id/recyclerView" android:background="@color/active" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="7.0">
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/lbl_shreeGurupeeth" android:maxLines="1" android:drawableLeft="@drawable/ic_satsang_legend" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="3.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/lbl_aamavastya" android:maxLines="1" android:drawableLeft="@drawable/ic_amavasya" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="2.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/lbl_pournima" android:maxLines="1" android:drawableLeft="@drawable/ic_purnima" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="2.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="7.0">
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="शनिवार परमपूज्य गुरुमाऊली हितगुज - श्री गुरुपीठ" android:maxLines="1" android:drawableLeft="@drawable/saturday_meeting" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="3.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="7.0">
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/lbl_sankasti" android:maxLines="1" android:drawableLeft="@drawable/ic_chaturthi_legend" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="3.0" />
                <com.dp.sgp.util.TextViewRegular android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center_vertical" android:background="@drawable/newrectangle" android:padding="@dimen/padding_small" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/lbl_akandnaam" android:maxLines="1" android:drawableLeft="@drawable/ic_yagna_legend" android:drawablePadding="@dimen/factor_mdpi_05_dp" android:layout_weight="4.0" />
            </LinearLayout>
            <RelativeLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_medium" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@id/sv" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/factor_mdpi_05_dp" android:text="@string/aajacha_suvuchar" />
                <TextView android:id="@id/tvSuvichar" android:background="@drawable/btn_edittext_old" android:padding="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_10" android:text="संसारात परिस्थिती बदलली म्हणजे सुख समाधान लाभेल असे नसून ईश्वराभिमुख मन:स्थिती होणे महत्वाचे आहे. -प. पू. गुरुमाऊली" android:layout_toLeftOf="@id/ivMauli" android:layout_below="@id/sv" />
                <ImageView android:id="@id/ivMauli" android:visibility="gone" android:layout_width="60.0dp" android:layout_height="80.0dp" android:layout_margin="1.0dp" android:src="@drawable/gurumauli" android:layout_below="@id/sv" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_20">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/lyt_main" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/text_medium" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@id/tvPanchang" android:padding="@dimen/padding_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="पंचांग: १५-मार्च-२०१८" android:drawablePadding="@dimen/factor_mdpi_05_dp" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/factor_mdpi_05_dp" android:layout_marginRight="@dimen/factor_mdpi_05_dp" android:layout_below="@id/lyt_main">
                    <include layout="@layout/header_panchang_calendar" />
                    <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:gravity="center_vertical" android:id="@id/tvTithi" android:padding="@dimen/padding_normal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="तिथी: फाल्गुन कृ. १०" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvVar" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="वार: बृह्स्पतीवार/गुरुवार" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvNakshatra" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="नक्षत्र: मघा" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvYog" android:padding="@dimen/padding_normal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvKaran" android:padding="@dimen/padding_normal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvChandraRashi" android:padding="@dimen/padding_normal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvRahukal" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvShubhaShubh" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                        <View android:background="@color/gray" android:layout_width="match_parent" android:layout_height="0.5dp" />
                        <TextView android:gravity="center_vertical" android:id="@id/tvDaySpecial" android:padding="@dimen/padding_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="राहू काळ: दु.१.३०-३.००" android:drawableLeft="@drawable/ic_swastik_panchang" android:drawablePadding="@dimen/padding_normal" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView android:id="@id/ivUpArrow" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80.0dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_up_button" />
</RelativeLayout>
